--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 body {
-    background-color: lemonchiffon;
+    background-color: #a9ba9d;
 
 }
 .title {
     font-family: georgia, helvetica, arial;
     font-size: 40px;
     color: 003333;
+    display: flex;
+    float: left;
+    padding: 20px;
   }
 
 p {
@@ -16,6 +19,41 @@ p {
     font-family: helvetica, arial;    
 }
 
+/*Hamberburger Menu*/
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+}
 
+.topnav #myLinks {
+    display: none;
+}
+
+.topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+.topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.pitcher-photo {
+    max-width: 250px;
+}
+.passion-photo {
+    max-width: 250px;
+}
+.rose-photo {
+    max-width: 250px;
+}
 
 /*@media
