--- a/styles.css
+++ b/styles.css
@@ -6,36 +6,36 @@ body {
     font-family: georgia, helvetica, arial;
     font-size: 40px;
     color: 003333;
-    display: flex;
-    float: left;
+    display: flex-start
     padding: 20px;
 }
 
 /*Hamberburger Menu*/
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
+.hamburger-menu {
+    width: 35px;
+    height: 30px;
+    position: fixed;
+    top: 2%;
+    right: 4%;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    justify-items: flex-start;
 }
 
-.topnav #myLinks {
-    display: none;
-}
-
-.topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-}
-
-.topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
+.navbar {
+    width: 115px;
+    height: 225px;
+    background-color: slategray;
+    position: fixed;
+    top: -225px;
+    right: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5% 5% 5% 5%;
+    transition: top 1s ease-in-out;
 }
 
 /*---Carousel--*/
