--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,18 @@ body {
     font-family: georgia, helvetica, arial;
     font-size: 40px;
     color: 003333;
-    display: flex-start
+    display: flex-start;
     padding: 20px;
+    animation-name: title;
+    animation-duration: 4s;
 }
+    /* The animation code */
+@keyframes title {
+    from {font-color:darkgreen;}
+    to {font-color: black;}
+    animation-duration: 4s;
+}
+
 
 /*Hamberburger Menu*/
 .hamburger-menu {
@@ -141,5 +150,3 @@ p {
 .rose-photo {
     max-width: 250px;
 }
-
-/*@media
