--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,68 @@ body {
     transition: top 1s ease-in-out;
 }
 
+.change {
+    top: 0;
+}
+
+.line {
+    width: 80%;
+    height: 3px;
+    background-color: white;
+    transition: all 0.8s;
+}
+
+.change .line {
+    tranform: rotateZ(405deg) translate(-8px, -6px);
+}
+
+.nav-list {
+    text-align: center;
+}
+
+.nav-item {
+    list-style: none;
+    margin: 15px;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: white;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    position: realitive;
+    padding: 5px 0;
+    right: 20px;
+}
+
+.nav-link::before,
+.nav-link::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+}
+
+.nav-link::after {
+    bottom: 0;
+    transform-origin: right;
+}
+
+.nav-link::before {
+    top: 0;
+    transform-origin: left;
+}
+
+.nav-link:hover::before,
+.nav-link:hover::after {
+    transform: scaleX(1)
+}
+
 /*---Carousel--*/
 .carousel {
     position: relative;
