--- a/styles.css
+++ b/styles.css
@@ -19,56 +19,6 @@ body {
     animation-duration: 60s;
 }
 
-
-/*Hamberburger Menu*/
-.mobile-container {
-    max-width: 480px;
-    margin: auto;
-    background-color: #555;
-    height: 500px;
-    color: white;
-    border-radius: 10px;
-}
-
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-    position: float;
-    float: right;
-}
-
-.navbar #myLinks {
-    display: none;
-}
-
-.navbar a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-}
-
-.navbar a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-
-/*
 .hamburger-menu {
     width: 35px;
     height: 30px;
@@ -85,7 +35,7 @@ body {
 .navbar {
     width: 115px;
     height: 225px;
-    background-color: slategray;
+    background-color: none;
     position: fixed;
     top: -225px;
     right: 12px;
@@ -108,7 +58,15 @@ body {
 }
 
 .change .line {
-    tranform: rotateZ(405deg) translate(-8px, -6px);
+    transform: rotateZ(-405deg) translate(-8px, 6px);
+}
+
+.change .line-2 {
+    opacity: 0;
+}
+
+.change .line-3 {
+    transform: rotateZ(405deg) translate (-8px, -6px);
 }
 
 .nav-list {
@@ -126,7 +84,7 @@ body {
     font-weight: 300;
     letter-spacing: 1px;
     text-transform: uppercase;
-    position: realitive;
+    position: relative;
     padding: 5px 0;
     right: 20px;
 }
@@ -156,7 +114,7 @@ body {
 .nav-link:hover::before,
 .nav-link:hover::after {
     transform: scaleX(1)
-}*/
+}
 
 /*---Carousel--*/
 .carousel {
